--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "declarations": true
   },
   "dependencies": {
+    "dotenv": "^8.1.0",
     "egg": "^2.15.1",
-    "egg-scripts": "^2.11.0"
+    "egg-scripts": "^2.11.0",
+    "firebase": "^7.1.0",
+    "firebase-admin": "^8.6.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
