--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "declarations": true
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.1.0",
     "egg": "^2.15.1",
     "egg-scripts": "^2.11.0",
     "firebase": "^7.1.0",
-    "firebase-admin": "^8.6.0"
+    "firebase-admin": "^8.6.0",
+    "object-hash": "^2.0.0",
+    "puppeteer": "^2.0.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
